copy header, hero section and relevant css styles from foleys 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
         <title>Foleys Family Butchers Duleek</title>
     </head>
 <body>
+    <header> 
+        <h1>            
+            Foleys family butchers duleek            
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="products-and-rewards.html" >Products</a></li>
+                <li><a href="about-us_and_contact-us.html">About us</a></li>
+                <li><a href="#">contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="hero-section">
+        <div id="hero"></div>
+        <div id="cover-text-1">
+            <h1>
+                We pride ourselves on having the finest cuts in the county, call in for the cut of your choice today!
+            </h1>          
+        </div>
+        <div id="cover-text-2">
+            <p>
+                 All our Poultry is natural, free range and organic corn fed!
+            </p>              
+        </div>
+        <div id="cover-text-3">
+            <p>
+                You select the cuts and to your liking!
+            </p>              
+        </div>
+        <div id="cover-text-4">
+            <p>
+                Tender, lean organic grass fed cattle sourced for the finest cuts of beef!
+            </p>              
+        </div>
+        <div id="cover-text-5">
+            <p>
+                All grade-A grass fed mountain Lamb!
+            </p>              
+        </div>
+        <div id="cover-image-1"></div>
+        <div id="cover-image-2"></div>
+        <div id="cover-image-3"></div>
+        <div id="cover-image-4"></div>
+    </section>
     
 </body>
 </html>
