correct link to images and style sheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Foleys Family Butchers Duleek</title>
     </head>
 <body>
@@ -35,10 +35,10 @@
         <h2 id="lamb"> Organic farmed lamb </h2>
         <hr class="lamb-hr-right">
         <div id="cover-image-lamb">
-            <img src="/assets/images/sheep.jpeg" alt="image of sheep in a field">
+            <img src="assets/images/sheep.jpeg" alt="image of sheep in a field">
         </div>
         <div id="cover-image-lamb-cuts">
-            <img src="/assets/images/lamb-cuts.jpeg" alt="illustration showing cuts of lamb on the carcass">
+            <img src="assets/images/lamb-cuts.jpeg" alt="illustration showing cuts of lamb on the carcass">
         </div>
         <div id="cover-text-lamb">
             <p>
@@ -53,10 +53,10 @@
         </h2>
         <hr class="poultry-hr-right">
         <div id="poultry-image">
-            <img src="/assets/images/chickens.jpeg" alt="image of organic chicken farm">
+            <img src="assets/images/chickens.jpeg" alt="image of organic chicken farm">
         </div>
         <div id="poultry-cuts">
-            <img src="/assets/images/chicken-cuts.jpeg" alt="illustration showing cuts of chicken on the carcass">
+            <img src="assets/images/chicken-cuts.jpeg" alt="illustration showing cuts of chicken on the carcass">
         </div>
         <div id="cover-text-poultry">
             <p>
@@ -72,7 +72,7 @@
         <hr class="beef-hr-right">
         <div id="cover-image-beef"></div>
         <div id="beef-cuts">
-            <img src="/assets/images/beef-cuts.png" alt="illustration showing cuts of beef on the carcass">
+            <img src="assets/images/beef-cuts.png" alt="illustration showing cuts of beef on the carcass">
         </div>
         <div id="cover-text-beef">
             <p>
@@ -87,10 +87,10 @@
         </h2>
         <hr class="pork-hr-right">
         <div id="pork-image">
-            <img src="/assets/images/pigs.jpeg" alt="image of organic pig farm">
+            <img src="assets/images/pigs.jpeg" alt="image of organic pig farm">
         </div>
         <div id="pork-cuts">
-            <img src="/assets/images/pork-cuts.jpg" alt="illustration showing cuts of pork and ham on the carcass">
+            <img src="assets/images/pork-cuts.jpg" alt="illustration showing cuts of pork and ham on the carcass">
         </div>
         <div id="cover-text-pork">
             <p>
