add pork description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
         <title>Foleys Family Butchers Duleek</title>
     </head>
 <body>
@@ -76,7 +76,11 @@
         </div>
         <div id="cover-text-beef">
             <p>
-                Tender, lean organic grass fed cattle sourced for the finest cuts of beef!
+                Our beef is renowned for its quality and delicious flavor. The way we guarantee the highest quality in beef in
+                 both texture and flavor is by choosing Irish beef and the highest grade of traditional breeds of cattle. 
+                 Our cattle are chosen on the basis of fat content, marbling and quality to ensure a consistency of flavour. 
+                 All the beef from our butchers is completely grass fed and is matured for a minimum of 28 days to intensify 
+                 beef flavour and tenderness.
             </p>              
         </div>  
 
@@ -94,7 +98,7 @@
         </div>
         <div id="cover-text-pork">
             <p>
-                You select the cuts and to your liking!
+                We source our Freerange Pork From Salters Free Range Farm,Moanmore, Fenagh, Co. Carlow.The Salter Family is passionate about ethical farming and animal welfare which aligns with our core values.We believe that every animal should have the opportunity where possible to explore its own natural environment and live a happy and healthy life as close to nature as possible.The pigs are free to roam outdoors and they can find shelter in warm, straw bedded huts.Thomas and his team ensure that they always have access to fresh vegetation and feed them grain grown right on the farm, ensuring high quality and full traceability.
             </p>              
         </div>
         
