tidy pork statement

--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
         </div>
         <div id="cover-text-pork">
             <p>
-                We source our Freerange Pork From Salters Free Range Farm,Moanmore, Fenagh, Co. Carlow.The Salter Family is passionate about ethical farming and animal welfare which aligns with our core values.We believe that every animal should have the opportunity where possible to explore its own natural environment and live a happy and healthy life as close to nature as possible.The pigs are free to roam outdoors and they can find shelter in warm, straw bedded huts.Thomas and his team ensure that they always have access to fresh vegetation and feed them grain grown right on the farm, ensuring high quality and full traceability.
+                We source our Freerange Pork From Salters Free Range Farm,Moanmore, 
+                Fenagh, Co. Carlow.The Salter Family is passionate about ethical farming 
+                and animal welfare which aligns with our core values.We believe that every 
+                animal should have the opportunity where possible to explore its own natural 
+                environment and live a happy and healthy life as close to nature as possible.
+                The pigs are free to roam outdoors and they can find shelter in warm, straw bedded huts.
+                Thomas and his team ensure that they always have access to fresh vegetation and feed them 
+                grain grown right on the farm, ensuring high quality and full traceability.
             </p>              
         </div>
         
