section added with id cover image

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         <div id="hero"></div>
     </section>
     <section id="description">
-        
-        <div id="cover-text-heading">
+        <section id="cover-image">
+            <div id="cover-text-heading">
             <h1>
                 We pride ourselves on having the finest cuts in the county, call in for the cut of your choice today!
             </h1>          
         </div>
+        </section>
+        
         <hr class="lamb-hr-left">
         <h2 id="lamb"> Organic farmed lamb </h2>
         <hr class="lamb-hr-right">
