making adjustments to hero image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </ul>
         </nav>
     </header>
+                                            <!-- HERO IMAGE SECTION-->
     <section id="hero-section">
+        <img src="assets/images/meat-cuts.jpeg" alt="image of numerous types of meat cuts">
         <div id="hero"></div>
             <div id="cover-text-heading">
                 <h1>
@@ -29,7 +31,7 @@
                 </h1>          
             </div>
     </section>    
-                                             <!-- LAMB SECTION -->  
+                                            <!-- LAMB SECTION -->  
     <section id="lamb-section">                    
             <div id="lamb-heading">
                 <hr class="lamb-hr-left">
@@ -37,11 +39,11 @@
                 <hr class="lamb-hr-right">
             </div>            
         
-            <div id="cover-image-lamb">
+            <div id="lamb-image">
                 <img src="assets/images/sheep.jpeg" alt="image of sheep in a field">
             </div>
 
-            <div id="cover-image-lamb-cuts">
+            <div id="lamb-cuts">
                 <img src="assets/images/lamb-cuts.jpeg" alt="illustration showing cuts of lamb on the carcass">
             </div>
 
@@ -53,7 +55,7 @@
                 </p>              
             </div>         
     </section>
-                                             <!-- POULTRY SECTION -->
+                                            <!-- POULTRY SECTION -->
     <section id="poultry-section">
             <div id="poultry-heading">
                     <hr class="poultry-hr-left">
@@ -78,7 +80,7 @@
                 </p>              
             </div> 
     </section>
-                                             <!-- BEEF SECTION -->
+                                            <!-- BEEF SECTION -->
     <section id="beef-section"> 
             <div id="beef-heading">
                 <hr class="beef-hr-left">
@@ -105,7 +107,7 @@
             </div> 
     </section>
 
-    <section id="pork-section">               <!-- PORK SECTION -->
+    <section id="pork-section">              <!-- PORK SECTION -->
         <div id="pork-heading">
                 <hr class="pork-hr-left">
                 <h2 id="pork">Organic pork</h2>
