--- a/rewards.html
+++ b/rewards.html
@@ -34,12 +34,13 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="rewards-and-contact.html" class="dropbtn active">Rewards and Contact-us</a>
+                        <a href="rewards.html" class="dropbtn active">Rewards and Contact-us</a>
                         <div class="dropdown-content">
-                            <a href="rewards-and-contact.html#rewards-section">Rewards</a>
-                            <a href="rewards-and-contact.html#contact-section">Contact us</a>
+                            <a href="rewards.html#rewards-section">Rewards</a>
+                            <a href="rewards.html#contact-section">Contact us</a>
                         </div>
-                    </li>              
+                    </li>
+                    <li><a href="contact-us.html" class="dropbtn">Contact-us</a></li>                 
                 </ul>        
             </nav>
         </div>
