start testing layouts for home page, finnish rewards form

--- a/products-and-about.html
+++ b/products-and-about.html
@@ -5,17 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Foleys Family Butchers Duleek</title>
+        <title>Foley's Butchers Duleek</title>
     </head>
   
 <body>
     <header>
         <div class="foley-name">
             <h1>            
-            Foleys butchers          
+            Foley's butchers          
             </h1>
             <p>Est. 2004</p> 
         </div>          
+        <div id="members">        
+            <form action="https://formdump.codeinstitute.net" method="POST">                           
+                <label for="login-uname">Members area login</label>
+                <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
+                <input type="password" placeholder="Password">
+                <input type="submit" value="Login" required>                
+            </form>
+        </div> 
 
          <!--Navigation Menu-->
         <div class="nav-div">
@@ -59,7 +67,7 @@
     </div>
     
                                             <!-- LAMB SECTION --> 
-    <div class="lamb-section">
+    <div id="lamb-section">
         <section>                    
             <div>
                 
@@ -75,7 +83,7 @@
                 <img src="assets/images/lamb-cuts.jpeg" alt="illustration showing cuts of lamb on the carcass">
             </div>
 
-            <div class="lamb-description">
+            <div id="lamb-description">
                 <p>
                     We source the finest mountain reared lamb from our specially selected partner farmers who rear 
                     grass fed sheep from the Mountain ranges in Mayo and Galway which results in the most tender of 
