--- a/contact-us.html
+++ b/contact-us.html
@@ -5,17 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Foleys Family Butchers Duleek</title>
+        <title>Foleys Butchers Duleek</title>
     </head>
 <body>
     <header>
         <div class="foley-name">
             <h1>            
-                Foleys butchers            
+                Foley's butchers            
             </h1>
             <p>Est. 2004</p> 
         </div> 
-          
+        <div id="members">        
+            <form action="https://formdump.codeinstitute.net" method="POST">                           
+                <label for="login-uname">Members area login</label>
+                <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
+                <input type="password" placeholder="Password">
+                <input type="submit" value="Login" required>                
+            </form>
+        </div>  
 
          <!--Navigation Menu-->
         <div class="nav-div">
