--- a/contact-us.html
+++ b/contact-us.html
@@ -81,7 +81,10 @@
         
         
     </section>
-    <footer>        
+    <footer>
+        <a href="index.html">
+            <h3><i class="fas fa-drumstick-bite"></i> Foley's butchers <i class="fas fa-drumstick-bite"></i></h3>
+        </a>        
         <ul class="social-media-links">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a></li>
