--- a/products-and-about.html
+++ b/products-and-about.html
@@ -174,7 +174,10 @@
 
 
     <!-- footer -->
-    <footer>        
+    <footer>  
+        <a href="index.html">
+            <h3><i class="fas fa-drumstick-bite"></i> Foley's butchers <i class="fas fa-drumstick-bite"></i></h3>
+        </a>      
         <ul class="social-media-links">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a></li>
