clean code in products

--- a/products.html
+++ b/products.html
@@ -65,9 +65,9 @@
         <div class="meat-type-heading">
             <section >                                
                 <div id="lamb-heading">
-                    <span><hr class="lamb-hr-left-2"></span>
+                    <span><hr></span>
                     <span><h2 class="lamb-2"> Organic farmed lamb</h2></span>
-                    <span><hr class="lamb-hr-right-2"></span>
+                    <span><hr></span>
                 </div>
             </section>            
         </div>
