--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/stylesheet.css">
         <title>Foleys Butchers Duleek</title>
     </head>
 <body>
@@ -32,20 +32,17 @@
                         https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
                     <li><a href="index.html" class="dropbtn">Home</a></li>
                     <li class="dropdown">
-                        <a href="products-and-about.html" class="dropbtn">Products and about-us</a>
+                        <a href="products.html" class="dropbtn">Products</a>
                         <div class="dropdown-content">
-                            <a href="products-and-about.html#lamb-section">Lamb</a>
-                            <a href="products-and-about.html#poultry-section">Poultry</a>                     
-                            <a href="products-and-about.html#beef-section">Beef</a>
-                            <a href="products-and-about.html#pork-section">Pork</a>
+                            <a href="products.html#lamb">Lamb</a>
+                            <a href="products.html#poultry">Poultry</a>                     
+                            <a href="products.html#beef">Beef</a>
+                            <a href="products.html#pork">Pork</a>
                         </div>
                     </li>
+                    <li><a href="about-us.html" class="dropbtn">About us</a></li>
                     <li class="dropdown">
-                        <a href="rewards.html" class="dropbtn ">Rewards and Contact-us</a>
-                        <div class="dropdown-content">
-                            <a href="rewards.html#rewards-section">Rewards</a>
-                            <a href="rewards.html#contact-section">Contact us</a>
-                        </div>
+                        <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
                     <li><a href="contact-us.html" class="dropbtn active">Contact-us</a></li>      
                 </ul>        
