temprary repair on products page in css need fixing

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
   
     
-    <section class="hero-section-3">
+    <!-- <section class="hero-section-3">
          <div>
              <h2>
                  We offer free local delivery service for all Foley's Loyal members, its as easy as 1 ,2 ,3.
@@ -92,7 +92,7 @@
         <div class="pic-right">
             <img src="assets/images/butcher-in-shop.jpg" alt="image of numerous types of meat cuts">
         </div>
-    </section>
+    </section> -->
 
          <button><a href="products.html">products test page</a></button>
 
