more testing on products page headings, color page beige

--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/stylesheet.css">
         <title>Foleys Butchers Duleek</title>
     </head>
-<body>
+<body class="about-page">
     <header>
         <div class="foley-name">
             <h1>            
@@ -55,13 +55,10 @@
 
 
 <section id="lamb">         
-    <div id="meat-type-heading-2">
-        <div >
-            <span><hr></span>
-            <span><h2 class="product-heading-2"> Organic farmed lamb</h2></span>
-            <span><hr></span>
-        </div>
-        
+    <div id="meat-type-heading">
+        <span><hr></span>
+        <span><h2 class="product-heading"> Organic farmed lamb</h2></span>
+        <span><hr></span>
     </div>
 </section>
 
