--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/stylesheet.css">
         <title>Foley's Butchers Duleek</title>
     </head>
-<body>
+<body class="products-page">
     <header>
         <div class="foley-name">
             <h1>            
