--- a/products.html
+++ b/products.html
@@ -53,8 +53,8 @@
         <h2 class="natural">We believe that every 
             animal should have the opportunity where possible to explore its own natural 
             environment and live a happy and healthy life as close to nature as possible. 
-            We carefully select our partner farmers ensuring the highest quality produce to you.
-            All our meats are fully tested and are fully traceable and complies with the latest in regulations.
+            We carefully select our partner farmers ensuring that ypu have the highest quality produce delivered straight from the farm to you.
+            All our meats are fully tested and are fully traceable and complies with the latest in EU regulations.
         <h2> 
     </section>
     <!--lamb-section-->
@@ -156,6 +156,7 @@
             <img src="assets/images/pork-cuts.jpg" alt="illustration showing cuts of chicken on the carcass">
         </div>
     </section>
+    <br>
 
          
 
@@ -165,7 +166,7 @@
 
 
 <footer>  
-    <a href="index.html">
+    <a href="index.html" aria-label="link back to home page">
         <h3><i class="fas fa-drumstick-bite"></i> Foley's butchers <i class="fas fa-drumstick-bite"></i></h3>
     </a>      
     <ul class="social-media-links">
