--- a/rewards.html
+++ b/rewards.html
@@ -273,7 +273,7 @@
             </fieldset>
             <div>
                 <h3 class="underline">Rewards scheme:</h3>
-                <p>Collect rewards points while you shop and earn rewards. Rewards points can be used towards your purchase by converting 
+                <p class="rewards-info">Collect rewards points while you shop and earn rewards. Rewards points can be used towards your purchase by converting 
                     to foley's discount vouchers in the members area, or collect 500 points and enter into the christmas hamper draw. 
                     Collect 1 point for every euro spent under 20 euro, and 2 points for every euro over 20 euro.  
                     see in-store for details.</p>
@@ -304,10 +304,9 @@
         
     </section>
     <footer>
-        <a href="index.html">
-            <h3><i class="fas fa-drumstick-bite"></i> Foley's butchers <i class="fas fa-drumstick-bite"></i></h3>
-        </a> 
-               
+        <a href="index.html" aria-label="link back to home page">
+        <h3><i class="fas fa-drumstick-bite"></i> Foley's butchers <i class="fas fa-drumstick-bite"></i></h3>
+        </a>      
         <ul class="social-media-links">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a></li>
@@ -319,7 +318,7 @@
             <li><a href="https://www.linkedin.com" target="_blank" rel="noopener" 
                 aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></i></a></li>
         </ul>
-        <p>Copyright Foleys duleek 2021 <i class="far fa-copyright"></i></p> 
+        <p>Copyright Foleys duleek 2021 <i class="far fa-copyright"></i></p>
     </footer>
     <script src="https://kit.fontawesome.com/41b937922a.js" crossorigin="anonymous"></script>
 </body>
