add 5th notch to slider in satisfaction area

--- a/contact-us.html
+++ b/contact-us.html
@@ -85,6 +85,7 @@
                       <div class="breakpoint"></div>
                       <div class="breakpoint"></div>
                       <div class="breakpoint"></div>
+                      <div class="breakpoint"></div>
                     </div>
                     <input id="myRange" step="1" name="foo" type="range" min="0" max="40" class="slider" />
                   </div>
@@ -93,6 +94,7 @@
                 <!-- https://stackoverflow.com/questions/49546104/input-range-make-small-vertical-lines-in-on-the-horizontal-line */ -->
                 <div class="slider-wrapper">
                     <div class="underlay">
+                      <div class="breakpoint"></div>
                       <div class="breakpoint"></div>
                       <div class="breakpoint"></div>
                       <div class="breakpoint"></div>
