correct h2 closing tag on products natural heading

--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
                 <label for="login-uname">Members area login</label>
                 <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
                 <input type="password" placeholder="Password">
-                <input type="submit" value="Login" required>                
+                <input type="submit" value="Login">                
             </form>
         </div>  
 
@@ -44,7 +44,7 @@
                     <li class="dropdown">
                         <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
-                    <li><a href="contact-us.html" class="dropbtn">Contact-us</a></li>              
+                    <li><a href="contact-us.html" class="dropbtn">Contact</a></li>              
                 </ul>        
             </nav>
         </div>       
@@ -55,13 +55,13 @@
             environment and live a happy and healthy life as close to nature as possible. 
             We carefully select our partner farmers ensuring that ypu have the highest quality produce delivered straight from the farm to you.
             All our meats are fully tested and are fully traceable and complies with the latest in EU regulations.
-        <h2> 
+        </h2> 
     </section>
     <!--lamb-section-->
     <section id="lamb">         
         <div class="meat-type-heading" >
             <span><hr></span>
-            <span><h2 class="product-heading"> Organic farmed lamb</h2></span>
+            <span><h2 class="product-heading"> Organic Lamb</h2></span>
             <span><hr></span>
         </div>
     </section>
@@ -109,7 +109,7 @@
     <section id="beef">
         <div class="meat-type-heading">
             <span><hr></span>
-            <span><h2 class="product-heading"> Organic beef</h2></span>
+            <span><h2 class="product-heading"> Organic Beef</h2></span>
             <span><hr></span>
         </div>
     </section>
@@ -178,7 +178,7 @@
         <li><a href="https://www.instagram.com" target="_blank" rel="noopener" 
             aria-label="Visit our instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://www.linkedin.com" target="_blank" rel="noopener" 
-            aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></i></a></li>
+            aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></a></li>
     </ul>
     <p>Copyright Foleys duleek 2021 <i class="far fa-copyright"></i></p> 
 </footer>
