--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
                 <label for="login-uname">Members area login</label>
                 <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
                 <input type="password" placeholder="Password">
-                <input type="submit" value="Login" required>                
+                <input type="submit" value="Login">                
             </form>
         </div>  
 
@@ -44,7 +44,7 @@
                     <li class="dropdown">
                         <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
-                    <li><a href="contact-us.html" class="dropbtn active">Contact-us</a></li>      
+                    <li><a href="contact-us.html" class="dropbtn active">Contact</a></li>      
                 </ul>        
             </nav>
         </div>
@@ -61,8 +61,8 @@
             County Meath, <br>
             Ireland. <br>
             A92RX83 <br>
-            Phone: (041) 9882676 <i class="fas fa-phone-square"></i><br>
-            email: info@foleys_duleek.ie <i class="fas fa-envelope-open-text"></i>
+            Phone:<i class="fas fa-phone-square"></i> (041) 9882676 <br>
+            email:<i class="fas fa-envelope-open-text"></i> info@foleys_duleek.ie </i>
         </p>
         <fieldset class="queries">
             <legend>Customer Queries</legend>
@@ -159,7 +159,7 @@
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener" 
                 aria-label="Visit our instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a></li>
             <li><a href="https://www.linkedin.com" target="_blank" rel="noopener" 
-                aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></i></a></li>
+                aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></a></li>
         </ul>
         <p>Copyright Foleys duleek 2021 <i class="far fa-copyright"></i></p> 
     </footer>
