--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <label for="login-uname">Members area login</label>
                 <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
                 <input type="password" placeholder="Password">
-                <input type="submit" value="Login" required>                
+                <input type="submit" value="Login" >                
             </form>
         </div>  
 
@@ -44,7 +44,7 @@
                     <li class="dropdown">
                         <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
-                    <li><a href="contact-us.html" class="dropbtn">Contact-us</a></li>              
+                    <li><a href="contact-us.html" class="dropbtn">Contact</a></li>              
                 </ul>        
             </nav>
         </div>       
@@ -77,7 +77,7 @@
         </div> 
     </section>
     <section class="customer-note">
-        <h2>At foley's we carry numerous types of pre packed frozen products, chips, onion rings, breaded chicken goujons, etc along with 
+        <h2>At Foley's we carry numerous types of pre packed frozen products, chips, onion rings, breaded chicken goujons, etc along with 
             numerous sauce and seasonings with a taste to suit all pallettes.
         </h2>
     </section>
@@ -90,7 +90,7 @@
        </div>
     </section>
     <section class="rewards-note">
-        <h2>At foley's we reward our loyal customers by giving points to our registered members with every purchase. Points can be 
+        <h2>At Foley's we reward our loyal customers by giving points to our registered members with every purchase. Points can be 
             used to claim special offers and entries to our quartely annual prize draws. T's & C's apply. <br>
             See our <a href="rewards.html">rewards</a> section for more details.
         </h2>
@@ -115,7 +115,7 @@
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener" 
                 aria-label="Visit our instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a></li>
             <li><a href="https://www.linkedin.com" target="_blank" rel="noopener" 
-                aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></i></a></li>
+                aria-label="Visit our linked-in page (opens in a new tab)"><i class="fab fa-linkedin"></i></a></li>
         </ul>
         <p>Copyright Foleys duleek 2021 <i class="far fa-copyright"></i></p>
     </footer>
