add new page and stylesheet to test alternative design

--- a/contact-us.html
+++ b/contact-us.html
@@ -19,7 +19,7 @@
             <form action="https://formdump.codeinstitute.net" method="POST">                           
                 <label for="login-uname">Members area login</label>
                 <input type="text" name="U-name" id="login-uname" placeholder="Username" required>
-                <input type="password" placeholder="Password">
+                <input type="password" placeholder="Password" required>
                 <input type="submit" value="Login">                
             </form>
         </div>  
@@ -48,9 +48,35 @@
                 </ul>        
             </nav>
         </div>
-       
-    </header>  
     
+    </header>  
+    <!-- testing burger menu-->
+    <div class="topnav">
+        <a href="#home" class="active"></a>
+        <div id="myLinks">
+          <a href="index.html">home</a>
+          <a href="products.html">Products</a>
+          <a href="about-us.html">About</a>
+          <a href="rewards.html">Rewards</a>
+          <a href="contact.html">contact</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+      <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
+
+        <!-- end of test code-->
+
     <section class="contact-us-details">
         <h1>Contact details:
         </h1>
