--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     <li class="dropdown">
                         <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
-                    <li><a href="contact-us.html" class="dropbtn">Contact</a></li>              
+                    <li><a href="contact-us.html" class="dropbtn">Contact</a></li> 
+                    <li><a href="new.html" class="dropbtn">new page</a></li>           
                 </ul>        
             </nav>
         </div>       
@@ -73,7 +74,7 @@
         </div>
                 
         <div id="hero-3">
-            <img src="assets/images/butchers-knife.jpeg" alt="picture of butcher cutting meat"> 
+            <img src="assets/images/butchers-knife.jpeg" alt="picture of a large butcher Knife on a cutting board"> 
         </div> 
     </section>
     <section class="customer-note">
