further testing, resizing and media query on new page and new page2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         <a href="rewards.html" class="dropbtn">Rewards</a>
                     </li>
                     <li><a href="contact-us.html" class="dropbtn">Contact</a></li> 
-                    <li><a href="new.html" class="dropbtn">new page</a></li>           
+                    <li><a href="new.html" class="dropbtn">new page</a></li> 
+                    <li><a href="new-2.html">new-2-page</a></li>          
                 </ul>        
             </nav>
         </div>       
