--- a/new-2.html
+++ b/new-2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="new.css">
-    <title>new test document</title>
+    <link rel="stylesheet" href="new-2.css">
+    <title>new test document2</title>
 </head>
 <body>
    <header>
@@ -70,9 +70,9 @@
         <div class="meat-text-outer">
             <div class="meat-heading-and-text">
                 <h1>Beef</h1>
-                <p>Our grass fed organic beef is selected <br>
-                    from the finest local farmers, <br>
-                    and is fully traceable from the <br>
+                <p>Our grass fed organic beef is selected 
+                    from the finest local farmers, 
+                    and is fully traceable from the 
                     farm to your fork.
                 </p>
             </div>
@@ -90,9 +90,9 @@
         <div class="meat-text-outer">
             <div class="meat-heading-and-text">
                 <h1>Pork</h1>
-           <p>Our Organic porkis selected <br>
-             from the finest local farmers, <br>
-              and is fully traceable from the <br>
+           <p>Our Organic porkis selected 
+             from the finest local farmers, 
+              and is fully traceable from the 
                farm to your fork.
             </p>
 
@@ -110,9 +110,9 @@
         <div class="meat-text-outer">
             <div class="meat-heading-and-text">
                 <h1>Chicken</h1>
-                <p>Our Organic chicken is selected <br>
-                    from the finest local farmers, <br>
-                    and is fully traceable from the <br>
+                <p>Our Organic chicken is selected 
+                    from the finest local farmers, 
+                    and is fully traceable from the 
                     farm to your fork.
                 </p>
             </div>
@@ -128,9 +128,9 @@
         <div class="meat-text-outer">
             <div class="meat-heading-and-text">
                 <h1>Lamb</h1>
-           <p>Our Organic lamb is selected <br>
-             from the finest local farmers, <br>
-              and is fully traceable from the <br>
+           <p>Our Organic lamb is selected 
+             from the finest local farmers, 
+              and is fully traceable from the 
                farm to your fork.
             </p>
 
